--- a/TodoMVP/app/src/main/res/layout/task_item.xml
+++ b/TodoMVP/app/src/main/res/layout/task_item.xml
@@ -34,6 +34,6 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+            android:textAppearance="@style/TextAppearance.AppCompat.Widget.PopupMenu.Small" />
     </LinearLayout>
 </LinearLayout>
