--- a/TodoMVP/app/src/main/res/layout/add_edit_task_fragment.xml
+++ b/TodoMVP/app/src/main/res/layout/add_edit_task_fragment.xml
@@ -9,10 +9,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin">
+        android:paddingBottom="@dimen/activity_vertical_margin">
 
         <EditText
             android:id="@+id/add_task_title"
@@ -20,14 +20,14 @@
             android:layout_height="wrap_content"
             android:hint="@string/title_hint"
             android:singleLine="true"
-            android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
+            android:textAppearance="@style/TextAppearance.AppCompat.Title" />
 
         <EditText
             android:id="@+id/add_task_description"
             android:layout_width="match_parent"
             android:layout_height="350dp"
             android:gravity="top"
-            android:hint="@string/description_hint"/>
+            android:hint="@string/description_hint" />
 
     </LinearLayout>
 </ScrollView>
