--- a/TodoMVP/app/src/main/res/layout/fragment_statistics.xml
+++ b/TodoMVP/app/src/main/res/layout/fragment_statistics.xml
@@ -9,7 +9,7 @@
         android:id="@+id/statistics"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:text="Text" />
+        android:text="Text"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
 </FrameLayout>
