--- a/TodoMVP/app/src/main/res/layout/task_item.xml
+++ b/TodoMVP/app/src/main/res/layout/task_item.xml
@@ -5,10 +5,9 @@
     android:background="@drawable/touch_feedback"
     android:orientation="horizontal"
     android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingBottom="@dimen/list_item_padding"
     android:paddingTop="@dimen/list_item_padding"
-    >
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingBottom="@dimen/list_item_padding">
 
     <CheckBox
         android:id="@+id/complete"
@@ -20,6 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+
         <TextView
             android:id="@+id/title"
             android:layout_width="match_parent"
